[build-system]
requires = ["hatchling>=1.11", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jsonjsc"
authors = [
  { name="IDI-Systems", email="contact@idi-systems.com" },
  { name="C. Foster", email="korewananda@gmail.com" },
]
description = "A package to parse out C/JS style block and single line comments from JSON files."
readme = "README.md"
license = "MIT"
requires-python = ">=2.7, >=3.5"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
]
dynamic = [
  "version",
]

[project.urls]
"Homepage" = "https://github.com/IDI-Systems/jsonjsc"
"Bug Tracker" = "https://github.com/IDI-Systems/jsonjsc"


## Hatch

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["jsonjsc"]

[tool.hatch.version]
source = "vcs"

## Hatch environments

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]

[tool.hatch.envs.default.scripts]
full = "pytest {args:tests}"

[[tool.hatch.envs.test.matrix]]
python = ["27", "35", "36", "37", "38", "39", "310", "311"]


[tool.hatch.envs.lint]
detached = true
dependencies = [
  "flake8",
]

[tool.hatch.envs.lint.scripts]
style = [
  "flake8 {args:.}",
]
all = [
  "style",
]
